...
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/numberOfItems"
            android:hint="Nummber of items"
            android:gravity="center"
            android:layout_weight="1">

        </com.google.android.material.textfield.TextInputEditText>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"/>
    </LinearLayout>

</LinearLayout>
