<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/miProducts"
        android:title="Products"
        android:icon="@drawable/ic_product"
        />
    <item
        android:id="@+id/miCategories"
        android:title="Category"
        android:icon="@drawable/ic_category"
        />
    <item
        android:id="@+id/miCart"
        android:title="Cart"
        android:icon="@drawable/ic_cart"/>
    <item
        android:id="@+id/miOrders"
        android:title="Orders"
        android:icon="@drawable/ic_orders"
        />

</menu>
